solv some layout issue

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -98,6 +98,11 @@ footer {
 
 /* miscellanous */
 
+IMG.centered {
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .debug_dump {
   clear: both;
   float: left;
